# ashe.github.io

./: .gitignore  CNAME  atom.xml  deploy.sh  flake.nix  index.html  result  rss.xml  site.nix  sitemap.xml  tailwind.config.js
about/: index.html
archive/: index.html
assets/css/: main.css
assets/scripts/: darkmode.js  init-scrollspy.js  navbar-menu.js  navbar-toc.js
blog/: index.html
blog/4-months-at-jagex/: index.html
blog/burnout/: index.html
blog/clojure-another-fp-language/: index.html
blog/hello-jagex/: index.html
blog/laplaces-rule-of-succession/: index.html
blog/lets-try-this-again/: index.html
blog/make-games-not-engines/: index.html
blog/making-a-game-with-haskell-and-apecs/: index.html
blog/new-year-new-website/: index.html
blog/no-longer-a-student/: index.html
blog/notakto-a-haskell-game-with-apecs-and-raylib/: index.html
blog/now-on-devto/: index.html
blog/of-boxes-and-threads/: index.html
blog/qna-1/: index.html
blog/start-programming/: index.html
blog/website-redesign-with-bulma/: index.html
blog/what-even-is-haskell/: index.html
blog/what-is-nix/: index.html
css-tools/: node-packages.nix  package-lock.json  package.json
data/: about.md  index.html
data/assets/css/: _base.css  _base.scss  _components.css  _components.scss  _dark.scss  _fonts.scss  _navbar.scss  _pages.scss  _reset.scss  _thirdparty.scss  _toc.scss  _util.scss  _variables.scss  main.css  main.scss
data/assets/scripts/: darkmode.js  init-darkmode.js  init-scrollspy.js  navbar-menu.js  navbar-toc.js
data/content/blog/: Start-Programming.md
data/templates/: about.html  archive-by-date.html  archive-by-project.html  default.html  page.html  post.html  project.html  tag.html
data/templates/includes/: article-header.html  article.html  footer.html  nav.html  post-header.html  post-list.html  (+3 more)
posts-by-project/: index.html
project/4d-geometry-viewer/: index.html
project/aas-sh/: index.html
project/alacrity/: index.html
project/deus-vult/: index.html
project/hex-voronoi/: index.html
project/hexagonalhs/: index.html
project/hogs-level-editor/: index.html
project/hsrogue/: index.html
project/redux-for-games/: index.html
project/relocate-engine/: index.html
project/space/: index.html
project/street-fighter/: index.html
project/thesis/: index.html
project/vect/: index.html
projects/: index.html
site-builder/: LICENSE  Site.cabal
site-builder/src/: Config.hs  Context.hs  Field.hs  Main.hs  Page.hs  Route.hs  Snippet.hs  Style.hs  Thirdparty.hs  Util.hs
site-builder/src/Field/: Bibliography.hs  CanonicalUrl.hs  Git.hs  Group.hs  List.hs  Markdown.hs  TableOfContents.hs  Tags.hs
site-builder/src/Field/Group/: Project.hs  Year.hs
site-builder/src/Page/: About.hs  Archive.hs  Feed.hs  Home.hs  Post.hs  Project.hs  Sitemap.hs  Tag.hs  Tags.hs
site-builder/src/Page/Archive/: Date.hs  Project.hs
site-builder/src/Snippet/: Anchor.hs  Caption.hs  Figure.hs  InfoBox.hs  Section.hs  Util.hs
tag/AI/: index.html
tag/C#/: index.html
tag/C++/: index.html
tag/Career/: index.html
tag/Clojure/: index.html
tag/DirectX/: index.html
tag/Engine/: index.html
tag/Functional/: index.html
tag/Game/: index.html
tag/GameMaker/: index.html
tag/Haskell/: index.html
tag/Haxe/: index.html
tag/Life/: index.html
tag/Lua/: index.html
tag/Maths/: index.html
tag/Nix/: index.html
tag/OpenGL/: index.html
tag/QNA/: index.html
tag/SFML/: index.html
tag/Slides/: index.html
tag/Thoughts/: index.html
tag/Tool/: index.html
tag/Tutorial/: index.html
tag/Uni/: index.html
tag/Unity/: index.html
tag/Web/: index.html
tag/aas.sh/: index.html
tags/: index.html
(+62 files in other folders)
